--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,13 @@
   "author": "nickhaus",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "nodemon": "^3.0.2",
     "sqlite3": "^5.1.6",
     "uuid": "^9.0.1"
